--- a/apps/pay-calc/index.html
+++ b/apps/pay-calc/index.html
@@ -84,6 +84,11 @@ description: 페르소나5 더 팬텀 X 과금 계산기
                     <input type="number" id="baseFutureDestiny" class="resource-input" min="0" step="1" value="0">
                     <span class="resource-unit">개</span>
                 </div>
+                <div class="resource-item">
+                    <img src="/assets/img/pay/인지 단면.png" alt="인지 단면">
+                    <input type="number" id="baseCognition" class="resource-input" min="0" step="1" value="0">
+                    <span class="resource-unit">개</span>
+                </div>
             </div>
         </div>
 
@@ -153,6 +158,10 @@ description: 페르소나5 더 팬텀 X 과금 계산기
                 <div class="resource-item">
                     <img src="/assets/img/pay/미래의 운명.png" alt="미래의 운명">
                     <span id="totalFutureDestiny">0개</span>
+                </div>
+                <div class="resource-item">
+                    <img src="/assets/img/pay/인지 단면.png" alt="인지 단면">
+                    <span id="totalCognition">0개</span>
                 </div>
             </div>
         </div>
