--- a/apps/pay-calc/index.html
+++ b/apps/pay-calc/index.html
@@ -174,9 +174,9 @@ description: 페르소나5 더 팬텀 X 과금 계산기
         <div class="expectation-item">
             <div class="expectation-header">
                 <span class="expectation-title">
-                    한정 캐릭터
+                    한정 캐릭터<span class="expectation-median" id="limitedCharMedianLabel"></span>
                     <span class="tooltip-icon tooltip-text"
-                          data-tooltip="현재 정해진 운명과 인지 단면(15개당 운명 1개 환급), 5성 1.2%·4성 13.12%에서 발생하는 인지 단면 환급을 무한 반복한다고 가정했을 때의 기대 횟수입니다. 4성은 모두 의식6 이상이며, 첫 5성 획득은 인지 단면 환급이 없어 이를 제외한 값입니다. 확률이므로 실제로는 더 많거나 적은 횟수가 필요할 수 있습니다.">?</span>
+                          data-tooltip="현재 정해진 운명과 인지 단면(15개당 운명 1개 환급), 5성과 4성에서 발생하는 인지 단면 환급을 무한 반복한다고 가정했을 때의 기대 횟수입니다. 4성은 모두 의식6 이상이며, 첫 5성 획득은 인지 단면 환급이 없어 이를 제외한 값입니다. 확률이므로 실제로는 더 많거나 적은 횟수가 필요할 수 있습니다.">?</span>
                 </span>
             </div>
             <div class="expectation-value">
@@ -191,9 +191,9 @@ description: 페르소나5 더 팬텀 X 과금 계산기
         <div class="expectation-item">
             <div class="expectation-header">
                 <span class="expectation-title">
-                    전체 무기 
+                    전체 무기<span class="expectation-median" id="allWeaponMedianLabel"></span>
                     <span class="tooltip-icon tooltip-text"
-                          data-tooltip="현재 정해진 코인과 인지 단면(10개당 코인 1개 환급), 5성 1.2%·4성 14.14%에서 발생하는 인지 단면 환급을 무한 반복한다고 가정했을 때의 기대 횟수입니다. 확률이므로 실제로는 더 많거나 적은 횟수가 필요할 수 있습니다.">?</span>
+                          data-tooltip="현재 정해진 코인과 인지 단면(10개당 코인 1개 환급), 5성과 4성에서 발생하는 인지 단면 환급을 무한 반복한다고 가정했을 때의 기대 횟수입니다. 확률이므로 실제로는 더 많거나 적은 횟수가 필요할 수 있습니다.">?</span>
                 </span>
             </div>
             <div class="expectation-value">
@@ -208,7 +208,7 @@ description: 페르소나5 더 팬텀 X 과금 계산기
         <div class="expectation-item">
             <div class="expectation-header">
                 <span class="expectation-title">
-                    한정 무기
+                    한정 무기<span class="expectation-median" id="limitedWeaponMedianLabel"></span>
                     <span class="tooltip-icon tooltip-text"
                           data-tooltip="전체 무기 기대 횟수 × (반천장 2/3)을 적용한 값입니다. 확률이므로 실제로는 더 많거나 적은 횟수가 필요할 수 있습니다.">?</span>
                 </span>
