--- a/index.html
+++ b/index.html
@@ -107,6 +107,14 @@ jp: /?lang=jp
         <div class="popular-content">
             <h2 id="popular-characters-title">인기 괴도</h2>
             <div class="character-cards">
+                <div class="character-card new">
+                    <div class="character-card-img"><a href="./character.html?name=슌·프론티어&v=' + APP_VERSION"
+                            style="text-decoration: none; color: inherit;"><img
+                                src="{{ site.baseurl }}/assets/img/tier/슌·프론티어.webp" alt="슌·프론티어"></a></div>
+                    <div class="character-card-text">
+                        <p>카노 슌·프론티어</p>
+                    </div>
+                </div>
                 <div class="character-card">
                     <div class="character-card-img"><a href="./character.html?name=쇼키·암야&v=' + APP_VERSION"
                             style="text-decoration: none; color: inherit;"><img
@@ -115,44 +123,36 @@ jp: /?lang=jp
                         <p>이케나미 쇼키·암야</p>
                     </div>
                 </div>
+                <div class="character-card new">
+                    <div class="character-card-img"><a href="./character.html?name=YUI&v=' + APP_VERSION"
+                            style="text-decoration: none; color: inherit;"><img
+                                src="{{ site.baseurl }}/assets/img/tier/YUI.webp" alt="YUI"></a></div>
+                    <div class="character-card-text">
+                        <p>YUI</p>
+                    </div>
+                </div>
+                <div class="character-card new">
+                    <div class="character-card-img"><a href="./character.html?name=유우미&v=' + APP_VERSION"
+                            style="text-decoration: none; color: inherit;"><img
+                                src="{{ site.baseurl }}/assets/img/tier/유우미.webp" alt="유우미"></a></div>
+                    <div class="character-card-text">
+                        <p>시이나 유우미</p>
+                    </div>
+                </div>
+                <div class="character-card new">
+                    <div class="character-card-img"><a href="./character.html?name=토모코·여름&v=' + APP_VERSION"
+                            style="text-decoration: none; color: inherit;"><img
+                                src="{{ site.baseurl }}/assets/img/tier/토모코·여름.webp" alt="토모코·여름"></a></div>
+                    <div class="character-card-text">
+                        <p>노게 토모코·여름</p>
+                    </div>
+                </div>
                 <div class="character-card">
                     <div class="character-card-img"><a href="./character.html?name=후카&v=' + APP_VERSION"
                             style="text-decoration: none; color: inherit;"><img
                                 src="{{ site.baseurl }}/assets/img/tier/후카.webp" alt="후카"></a></div>
                     <div class="character-card-text">
                         <p>야마기시 후카</p>
-                    </div>
-                </div>
-                <div class="character-card">
-                    <div class="character-card-img"><a href="./character.html?name=미츠루&v=' + APP_VERSION"
-                            style="text-decoration: none; color: inherit;"><img
-                                src="{{ site.baseurl }}/assets/img/tier/미츠루.webp" alt="미츠루"></a></div>
-                    <div class="character-card-text">
-                        <p>키리조 미츠루</p>
-                    </div>
-                </div>
-                <div class="character-card">
-                    <div class="character-card-img"><a href="./character.html?name=카타야마&v=' + APP_VERSION"
-                            style="text-decoration: none; color: inherit;"><img
-                                src="{{ site.baseurl }}/assets/img/tier/카타야마.webp" alt="카타야마"></a></div>
-                    <div class="character-card-text">
-                        <p>카타야마 쿠미</p>
-                    </div>
-                </div>
-                <div class="character-card">
-                    <div class="character-card-img"><a href="./character.html?name=마나카&v=' + APP_VERSION"
-                            style="text-decoration: none; color: inherit;"><img
-                                src="{{ site.baseurl }}/assets/img/tier/마나카.webp" alt="마나카"></a></div>
-                    <div class="character-card-text">
-                        <p>나가오 마나카</p>
-                    </div>
-                </div>
-                <div class="character-card">
-                    <div class="character-card-img"><a href="./character.html?name=이치고&v=' + APP_VERSION"
-                            style="text-decoration: none; color: inherit;"><img
-                                src="{{ site.baseurl }}/assets/img/tier/이치고.webp" alt="이치고"></a></div>
-                    <div class="character-card-text">
-                        <p>시카노 이치고</p>
                     </div>
                 </div>
             </div>
